--- a/app/src/main/res/layout/activity_fun_facts.xml
+++ b/app/src/main/res/layout/activity_fun_facts.xml
@@ -5,10 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
+    android:background="@color/green"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:background="@color/green"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.facts.fun.abarza.funfacts.FunFactsActivity">
 
@@ -25,6 +26,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
+      android:textColor="@color/green"
       android:layout_centerHorizontal="true"
       android:text="Siguiente dato"/>
 
@@ -32,12 +34,12 @@
       android:id="@+id/fact_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:textColor="@color/white"
-      android:text="Guepardo es en realidad una comadreja."
-      android:textSize="24sp"
-      android:layout_centerVertical="true"
       android:layout_alignParentLeft="true"
-      android:layout_alignParentStart="true"/>
+      android:layout_alignParentStart="true"
+      android:layout_centerVertical="true"
+      android:text="Guepardo es en realidad una comadreja."
+      android:textColor="@color/white"
+      android:textSize="24sp"/>
 
 </RelativeLayout>
 
